Version 3.0-3

 o Made key.args argument to plot.eff() and plot.effpoly() more flexible (suggestion of Ian Kyle).


Version 3.0-2

 o plot.eff() honors rescale.axis=FALSE when plotting partial residuals (bug reported by Alexander Wietzke).

 o Effect.mer() can use KR coefficient covariances to construct CIs for effects in LMMs.

 o Modernized package dependencies/namespace.

Version 3.0-1

 o Added an argument vcov. to Effect and effect (and allEffects) to select a function for computing the variance covariance matrix of the coefficient estimates.  The default is the usual `vcov` fucntion.

 o Added a warning to the documentation for effect for using predictors of class "dates" or "times".

 o Fixed bug in Effect.gls() when var or cor function depends on variables in the data set (reported by Felipe Albornoz).

 o Small fixes/improvements.

Version 3.0-0

 o Added partial residuals for multidimensional component+residual plots to Effect.lm().

 o Small bug fixes.

Version 2.3-0

 o removed stray character in a the mixed models file
 
 o ci.style="bands" is now the default for variates on the horizontal axis and can also be used with multiline=TRUE
  
 o Added ci.style='bands', band.transparency, band.colors, and lwd to plot.effpoly() for line plots to give filled confidence bands and control line width

 o Added Effect.mlm() for multivariate linear models
 
 o Interpolating splines are now used by default when drawing lines in effects plots unless the argument use.splines=FALSE
 
 o effect() now calls Effect(); all effect() methods are removed, but effect() will continue to work as before.

 o Various methods for effect objects now handle factors with a "valid" NA level (fixing bug reported by Joseph Larmarange).

 o Further bug fixes in effects.mer() and effects.lme() (following bug report by Felipe E. Albornoz).

Version 2.2-6

 o bug fixes in effects.mer and effects.lme.

 o added terms.gls() to make effect.gls() and Effect.gls() work again.
