@@ -2,6 +2,7 @@ Version 3.0-3
 
  o Made key.args argument to plot.eff() and plot.effpoly() more flexible (suggestion of Ian Kyle).
 
+ o Moved pbkrtest package to Suggests and adjusted code for mixed models accordingly, to accomodate Debian (request of Dirk Eddelbuettel).
 
 Version 3.0-2
 
